--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
     <body>
-        <h1>Replace your battery.</h1>
+        <h1>Karan is forcing me to learn coding.</h1>
     </body>
 </html>
