--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
     <head></head>
     <body>
         <h1>Karan is forcing me to learn coding.</h1>
+        <h2> Karan is still forcing me to learn coding.</h2>
+        <h3> It is tea time but Karan is not letting me drink tea. </h3>
+        
     </body>
 </html>
