--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <h1>Karan is forcing me to learn coding.</h1>
         <h2> Karan is still forcing me to learn coding.</h2>
         <h3> It is tea time but Karan is not letting me drink tea. </h3>
+        <h6> Life sucks </h6>
+        <p>H&M has sale. Can we go? </p> 
         
     </body>
 </html>
