--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h6> Life sucks </h6>
         <p>H&M has sale. Can we go? </p> 
         
+        <a href="http://karankurani.com">Link content</a>
     </body>
 </html>
