--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h6> Life sucks </h6>
         <p>H&M has sale. Can we go? </p> 
         
-        <a href="http://karankurani.com">Link content</a>
+        <a href="http://karankurani.com">Click here</a>
+   
     </body>
 </html>
