--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <p>H&M has sale. Can we go? </p> 
         
         <a href="http://karankurani.com">Click here</a>
-   <a href="http://google.com"> This is google/a>
+   <a href="http://google.com"> This is google</a>
     </body>
 </html>
